--- a/.gitignore
+++ b/.gitignore
@@ -147,7 +147,7 @@ Temporary Items
 #[Ii]nclude/[Dd][Bb]conn.php
 *.rar
 *[Kk]opi.*
-Include/DBconn.php
+[cC]lass/[Dd][Bb][Cc]onn.php
 *.less
 JS/tinymce/langs/readme.md
 JS/tinymce/license.txt
