--- a/.gitignore
+++ b/.gitignore
@@ -151,3 +151,4 @@ JS/tinymce/license.txt
 Include/CoreParts/DBconn.php
 Include/CoreParts/UrlContoller.php
 Include/TestArea/Convert.php
+Include/TestArea/Convert.php
