--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,4 @@ Include/CoreParts/DBconn.php
 Include/CoreParts/UrlContoller.php
 Include/TestArea/Convert.php
 Include/TestArea/Convert.php
+Include/TestArea/curlTest.php
