--- a/.gitignore
+++ b/.gitignore
@@ -153,3 +153,4 @@ Include/CoreParts/UrlContoller.php
 Include/TestArea/Convert.php
 Include/TestArea/Convert.php
 Include/TestArea/curlTest.php
+Include/TestArea/Convert.php
